--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ html {
 
 body {
 	font-family: 'Ubuntu', sans-serif;
-	background : #b9b9b9;
+	background : #e9e9e9;
 	font-size  : 14px;
 	color      : #345;
 }
@@ -22,36 +22,62 @@ body {
 	max-width     : 960px;
 	margin        : 0 auto;
 	background    : white;
-	padding       : 15px;
+	padding       : 20px;
 	min-height    : 100%;
 	display       : flex;
 	flex-direction: column;
 }
 
 header {
-	border-bottom : 1px dashed gray;
-	margin-bottom : 15px;
-	padding-bottom: 15px;
+	border-bottom  : 1px dashed gray;
+	margin-bottom  : 20px;
+	padding-bottom : 20px;
+	display        : flex;
+	align-items    : center;
+	justify-content: space-between;
+}
+
+
+h1 {
+    color: darkmagenta;
+}
+
+
+h1 + small {
+    color: gray;
 }
 
 main {
 	flex-grow: 1;
 }
 
-.manage {
-	display      : flex;
-	margin-bottom: 15px;
+nav {
+	display: flex;
 }
 
-.manage>button {
-	flex-grow  : 1;
-	padding    : 10px;
-	font-size  : 13px;
-	font-weight: bold;
+nav>a {
+	cursor: pointer;
+    flex-grow: 1;
+    padding: 5px 10px;
+    font-size: 13px;
+    font-weight: bold;
+    border-right: 1px solid #dedede;
+    outline: none;
+    text-decoration: none;
+    color: darkmagenta;
+}
+
+nav>a:last-child {
+	border-right: 0 none;
+}
+
+nav>a:target,
+nav>a:hover {
+	background: #ececec;
 }
 
 footer {
 	border-top : 1px dashed gray;
-	margin-top : 15px;
-	padding-top: 15px;
+	margin-top : 20px;
+	padding-top: 20px;
 }
