--- a/css/main.css
+++ b/css/main.css
@@ -52,12 +52,12 @@ main {
 
 nav {
 	display: flex;
-	flex-wrap: wrap;
+    flex-wrap: wrap;
+    justify-content: flex-end;
 }
 
 nav>a {
     cursor: pointer;
-    flex-grow: 1;
     padding: 5px 10px;
     font-size: 13px;
     font-weight: bold;
@@ -65,6 +65,8 @@ nav>a {
     text-decoration: none;
     color: darkmagenta;
     text-align: center;
+    background: #f7f7f7;
+    box-shadow: 0 0 1px 0 #ababab;
 }
 
 nav>a:target,
